[tool.poetry]
name = "rabbit"
version = "0.1.0"
description = ""
authors = ["noah.Nam <noah85.Nam@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "*"
flask-sqlalchemy = "*"
flask-migrate = "*"
flask-jwt-extended = "3.25.0"
psycopg2-binary = "*"
importlib-metadata = "*"
inject = "*"
pydantic = "*"
pypubsub = "*"
flasgger = "*"
greenlet = "*"
gevent = "^20.9.0"
gunicorn = "==20.0.4"
boto3= "1.12.17"
pyyaml = "5.3"
redis = "*"
supervisor = "^4.1.0"
pyfcm = "*"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pytest-xdist = "*"
pytest = "*"
pytest-factoryboy = "*"
faker = "*"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
